kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: microservices-app
  labels:
    name: microservices-app
