kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: microservices-app
  labels:
    app: backend
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: backend
