kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: microservices-app
  labels:
    app: frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: frontend
