kubernetes/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: microservices-app
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: postgres
  clusterIP: None
